[project]
name = "banking_machine"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
description = "Small libary to simulate a banking mashine with a gui"
authors = [{ name = "Paul Jonas Dohle", email = "paul.jonas@dohle-net.de" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",

]

[project.urls]
# TODO Add after hosting on GitHub
