[project]
name = "banking_machine"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
description = "Small libary to simulate a banking mashine with a gui"
authors = [{ name = "Paul Jonas Dohle", email = "paul.jonas@dohle-net.de" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
]

dependencies = ["customtkinter== 5.2.2", "darkdetect==0.8.0", "packaging==24.2"]

[project.urls]
Repository = "https://github.com/RedLion8399/banking_machine"
Issues = "https://github.com/RedLion8399/banking_machine/issues"
Documentation = "https://github.com/RedLion8399/banking_machine/issues"
